--- a/conda/blender-thirdparty/meta.yaml
+++ b/conda/blender-thirdparty/meta.yaml
@@ -16,7 +16,7 @@ source:
     folder: oiio
 
   - git_url: https://github.com/martijnberger/clew.git
-    git_rev: 0.10
+    git_rev: 50751dd62c05a03b2b9c001b9eb6e29e392ee9db
     folder: clew
 
   - git_url: https://github.com/PixarAnimationStudios/OpenSubdiv.git
@@ -29,12 +29,7 @@ build:
 
   missing_dso_whitelist:
     - $RPATH/ld-linux-x86-64.so.2 # [unix]
-    - $RPATH/libHalf-2_4.so.24 # [unix]
-    - $RPATH/libIex-2_4.so.24 # [unix]
-    - $RPATH/libIlmImf-2_4.so.24 # [unix]
-    - $RPATH/libIlmThread-2_4.so.24 # [unix]
     - $RPATH/libc.so.6 # [unix]
-    - $RPATH/libclew.so.1.0.0 # [unix]
     - $RPATH/libdl.so.2 # [unix]
     - $RPATH/libm.so.6 # [unix]
     - $RPATH/libpthread.so.0 # [unix]
