--- a/conda/runtime/meta.yaml
+++ b/conda/runtime/meta.yaml
@@ -11,6 +11,7 @@ build:
 
   missing_dso_whitelist:
     - $RPATH/ld-linux-x86-64.so.2 # [unix]
+    - $RPATH/libsndio.so.7.0 # [unix]
     - $RPATH/libCg.so # [unix]
     - $RPATH/libCgGL.so # [unix]
     - $RPATH/libGL.so.1 # [unix]
