--- a/conda/runtime/meta.yaml
+++ b/conda/runtime/meta.yaml
@@ -44,7 +44,7 @@ build:
 
 requirements:
   build:
-    - 7za # [win]
+    - m2-p7zip # [win]
     - idna ==2.9
     - jsonschema ==3.2.0
     - kcc
