--- a/conda/blender-thirdparty/meta.yaml
+++ b/conda/blender-thirdparty/meta.yaml
@@ -57,6 +57,7 @@ requirements:
     - m2-patch # [win]
     - python ==3.8
     - zlib
+    - pthread-stubs # [win]
   run:
     - freetype # [unix]
     - jpeg # [unix]
