--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -1,33 +1,33 @@
 package:
   name: python-blender
-  version: "2.90.0"
+  version: "2.92.0"
 
 source:
   - git_url: https://git.blender.org/blender.git
-    git_rev: v2.90.0
+    git_rev: v2.92.0
     folder: blender
 
   - git_url: https://git.blender.org/blender-addons.git
-    git_rev: v2.90.0
+    git_rev: v2.92.0
     folder: blender_extras/release/scripts/addons
 
   - git_url: https://git.blender.org/blender-addons-contrib.git
-    git_rev: v2.90.0
+    git_rev: v2.92.0
     folder: blender_extras/release/scripts/addons_contrib
 
   - git_url: https://git.blender.org/blender-translations.git
-    git_rev: v2.90.0
+    git_rev: v2.92.0
     folder: blender_extras/release/datafiles/locale
 
   - git_url: https://git.blender.org/blender-dev-tools.git
-    git_rev: v2.90.0
+    git_rev: v2.92.0
     folder: blender_extras/source/tools
 
   - svn_url: https://svn.blender.org/svnroot/bf-blender/trunk/lib/win64_vc15 # [win64]
     folder: lib/win64_vc15 # [win64]
 
-  # - svn_url: https://svn.blender.org/svnroot/bf-blender/trunk/lib/linux_centos7_x86_64 # [unix]
-  #   folder: lib/linux_centos7_x86_64 # [unix]
+  - svn_url: https://svn.blender.org/svnroot/bf-blender/trunk/lib/linux_centos7_x86_64 # [unix]
+    folder: lib/linux_centos7_x86_64 # [unix]
 
 build:
   number: 0
