--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -4,7 +4,7 @@ package:
 
 source:
   - git_url: https://github.com/panda3d/panda3d.git
-    git_rev: v1.10.8
+    git_rev: 38d304f2fe187e4a748cc811b9b4569e15d5b606
     folder: .
     patches:
       - prefix108.patch # [win]
@@ -22,7 +22,7 @@ source:
 
 build:
   number: 0
-  string: 1614198272
+  string: 1614364286
 
   missing_dso_whitelist:
     - $RPATH/libCg.so # [unix]
