--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -24,9 +24,11 @@ source:
     folder: blender_extras/source/tools
 
   - svn_url: https://svn.blender.org/svnroot/bf-blender/trunk/lib/win64_vc15 # [win64]
+    svn_rev: v2.92.0
     folder: lib/win64_vc15 # [win64]
 
   - svn_url: https://svn.blender.org/svnroot/bf-blender/trunk/lib/linux_centos7_x86_64 # [unix]
+    svn_rev: v2.92.0
     folder: lib/linux_centos7_x86_64 # [unix]
 
 build:
@@ -50,7 +52,7 @@ build:
 
 requirements:
   build:
-    - blender-thirdparty # [unix]
+    # - blender-thirdparty # [unix]
     - bullet
     - cmake
     - fontconfig # [unix]
