--- a/ksdk.yml
+++ b/ksdk.yml
@@ -33,6 +33,6 @@ dependencies:
   - py-ubjson==0.16.1
   - pylint==2.2.2
   - sphinx-materialdesign-theme==0.1.11
+  - panda3d-gltf==0.12
   - git+https://github.com/kitsune-ONE-team/KITSUNETSUKI-Asset-Tools.git
-  - git+https://github.com/kitsune-ONE-team/panda3d-gltf.git@ksdk
   - https://github.com/kitsune-ONE-team/RenderPipeline/releases/download/v2.0.1/render_pipeline-2.0.1-py3-none-any.whl
