--- a/conda/runtime/meta.yaml
+++ b/conda/runtime/meta.yaml
@@ -11,11 +11,11 @@ build:
 
   missing_dso_whitelist:
     - $RPATH/ld-linux-x86-64.so.2 # [unix]
-    - $RPATH/libsndio.so.7.0 # [unix]
     - $RPATH/libCg.so # [unix]
     - $RPATH/libCgGL.so # [unix]
     - $RPATH/libGL.so.1 # [unix]
     - $RPATH/libX11.so.6 # [unix]
+    - $RPATH/libasound.so.2 # [unix]
     - $RPATH/libc.so.6 # [unix]
     - $RPATH/libdl.so.2 # [unix]
     - $RPATH/libm.so.6 # [unix]
