--- a/conda/runtime/meta.yaml
+++ b/conda/runtime/meta.yaml
@@ -23,6 +23,7 @@ build:
     - $RPATH/libopenal.so.1 # [unix]
     - $RPATH/libpthread.so.0 # [unix]
     - $RPATH/librt.so.1 # [unix]
+    - $RPATH/libsndio.so.7.0 # [unix]
     - $RPATH/libutil.so.1 # [unix]
     - $RPATH\api-ms-win-core-winrt-error-l1-1-0.dll # [win]
     - $RPATH\api-ms-win-core-winrt-l1-1-0.dll # [win]
