--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -14,6 +14,7 @@ source:
       - rp_light.patch
       - fabrik108.patch
       - udp.patch
+      - bullet.patch
 
   # - url: https://www.panda3d.org/download/panda3d-1.10.8/panda3d-1.10.8-tools-win32.zip # [win32]
   #   md5: 5841b1527c20a2a697784710e60fcfdf # [win32]
@@ -29,7 +30,7 @@ source:
 
 build:
   number: 0
-  string: 1626033176
+  string: 1626212387
 
   missing_dso_whitelist:
     - $RPATH/libCg.so # [unix]
