--- a/conda/panda3d/meta.yaml
+++ b/conda/panda3d/meta.yaml
@@ -34,6 +34,7 @@ build:
   string: 1626263745
 
   missing_dso_whitelist:
+    - /lib64/ld-linux-x86-64.so.2 # [unix]
     - $RPATH/libCg.so # [unix]
     - $RPATH/libCgGL.so # [unix]
     - $RPATH/libGL.so.1 # [unix]
