--- a/conda/runtime/meta.yaml
+++ b/conda/runtime/meta.yaml
@@ -10,6 +10,7 @@ build:
   string: 1626263745
 
   missing_dso_whitelist:
+    - /lib64/ld-linux-x86-64.so.2 # [unix]
     - $RPATH/ld-linux-x86-64.so.2 # [unix]
     - $RPATH/libCg.so # [unix]
     - $RPATH/libCgGL.so # [unix]
