--- a/conda/runtime/meta.yaml
+++ b/conda/runtime/meta.yaml
@@ -7,7 +7,7 @@ source:
 
 build:
   number: 0
-  string: 1627593487
+  string: 1627976409
 
   missing_dso_whitelist:
     - /lib64/ld-linux-x86-64.so.2 # [unix]
@@ -49,7 +49,7 @@ requirements:
   build:
     - idna ==2.9
     - jsonschema ==3.2.0
-    - kcc
+    - kphys
     - panda3d
     - pyrsistent ==0.16.0
     - python ==3.8
