--- a/container/sdk_toolbox/Dockerfile
+++ b/container/sdk_toolbox/Dockerfile
@@ -1,8 +1,8 @@
-# image built from container/sdk_base.Dockerfile
+# image built from container/sdk_base/Dockerfile
 FROM docker.io/yonnji/sdk:base
 
-COPY ./sdk.yaml /opt/sdk.yaml
+COPY ./sdk.yml /opt/sdk.yml
 
 RUN \
-    /opt/m3/bin/conda env update -n base -f /opt/sdk.yaml && \
-    /opt/m3/bin/conda clean -a -y
+    /opt/miniconda3/bin/conda env update -n base -f /opt/sdk.yml && \
+    /opt/miniconda3/bin/conda clean -a -y
