--- a/conda/runtime/meta.yaml
+++ b/conda/runtime/meta.yaml
@@ -49,7 +49,7 @@ requirements:
   build:
     - idna ==2.9
     - jsonschema ==3.2.0
-    - kphys
+    - kitsunetsuki-phys
     - panda3d
     - pyrsistent ==0.16.0
     - python ==3.8
