--- a/conda/blender-thirdparty/meta.yaml
+++ b/conda/blender-thirdparty/meta.yaml
@@ -46,19 +46,20 @@ build:
 requirements:
   build:
     - cmake
+    - conda ==4.8.3
     - fontconfig # [unix]
     - freetype
-    - jpeg
     - giflib
+    - jpeg
     - libgcc-ng # [unix]
     - libpng # [unix]
     - libstdcxx-ng # [unix]
     - libtiff
     - m2-gcc-libs # [win]
     - m2-patch # [win]
+    - pthread-stubs # [win]
     - python ==3.8
     - zlib
-    - pthread-stubs # [win]
   run:
     - freetype # [unix]
     - jpeg # [unix]
