--- a/container/sdk_toolbox/sdk.yml
+++ b/container/sdk_toolbox/sdk.yml
@@ -15,12 +15,12 @@ dependencies:
 - jedi ==0.16.0
 - jinja2 ==2.11.2
 - jsonschema ==3.2.0
-# - kphys
+- kitsunetuski-phys
 - panda3d
 - pip ==20.0.2
 - pyqt ==5.9.2
 - pyrsistent ==0.16.0
-- python >=3.8
+- python ==3.8
 - python-blender
 - setuptools==46.1.3
 - six ==1.14.0
