--- a/conda/blender/meta.yaml
+++ b/conda/blender/meta.yaml
@@ -76,7 +76,7 @@ requirements:
     - libpng # [unix]
     - libstdcxx-ng # [unix]
     - libtiff # [unix]
-    - python >=3.9.6 <=3.10.0
+    - python >=3.9.6,<3.10.0
     - zlib # [unix]
 
 about:
