--- a/sdk.yml
+++ b/sdk.yml
@@ -6,33 +6,32 @@ channels:
 
 dependencies:
 - anaconda-client
-- attrs ==19.3.0
+- attrs ==21.2.0
 - cmake >=3.16.0
-- conda ==4.8.3
+- conda ==4.10.3
 - cython ==0.29.17
-- flake8 ==3.7.9
-- idna ==2.9
-- jedi ==0.16.0
-- jinja2 ==2.11.2
+- flake8
+- idna
+- jedi
+- jinja2
 - jsonschema ==3.2.0
 - kitsunetsuki-phys
 - panda3d
-- pip ==20.0.2
+- pip
 - pyqt ==5.9.2
-- pyrsistent ==0.16.0
-- python ==3.8
+- pyrsistent
+- python ==3.9.6
 - python-blender
-- setuptools==46.1.3
-- six ==1.14.0
-- sphinx ==3.0.3
-- twine ==2.0.0
+- setuptools
+- six
+- sphinx
 - pip:
-  - epc==0.0.5
-  - httplib2==0.17.3
+  - epc
+  - httplib2==0.19.3
   - oauth2==1.9.0.post1
   - panda3d-gltf==0.12
   - py-ubjson==0.16.1
-  - pylint==2.2.2
-  - sphinx-materialdesign-theme==0.1.11
+  - pylint
+  - sphinx-materialdesign-theme
   - git+https://github.com/kitsune-ONE-team/KITSUNETSUKI-Asset-Tools.git
   - https://github.com/kitsune-ONE-team/RenderPipeline/releases/download/v2.0.1/render_pipeline-2.0.1-py3-none-any.whl
